# servitor

./: .env.example  .gitignore  CLAUDE.md  README.md  REPL-IMPLEMENTATION-SUMMARY-FINAL.md  REPL-IMPLEMENTATION-SUMMARY.md  cli_test.sh  pyproject.toml  recc_cli_test.sh  recc_comprehensive_test.py  recc_edge_test.py  recc_mcp_test.py  recc_notebook_test.py  recc_planning_test.py  recc_pr_test.py  recc_simple_test.py  recc_task_test.py  recc_tool_params_test.py  repl_test.py  run_all_tests.sh  test_noninteractive_merge.txt  tool_section.js
re_cc/: __init__.py  __main__.py
re_cc/api/: __init__.py  client.py  repl.py  server.py
re_cc/cli/: __init__.py  app.py
re_cc/config/: __init__.py  manager.py
re_cc/prompts/: __init__.py  general.py  tools.py
re_cc/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
re_cc/repl/: __init__.py  cli.py  interface.py
re_cc/security/: __init__.py  keyring.py
re_cc/terminal/: __init__.py  tui.py
re_cc/tools/: __init__.py  __main__.py  agent.py  bash.py  file_operations.py  git_tools.py  mcp.py  notebook.py  planning.py  pr.py  provider.py  search.py  system.py  task.py
re_cc/utils/: __init__.py  agent.py  command.py  conversation.py  editor.py  fs.py  git.py  mcp.py  search.py  task.py
